--- a/storefront/package.json
+++ b/storefront/package.json
@@ -64,8 +64,9 @@
     "ansi-colors": "^4.1.3",
     "autoprefixer": "^10.4.2",
     "babel-loader": "^8.2.3",
+    "babel-preset-next": "^1.4.0",
     "eslint": "8.10.0",
-    "eslint-config-next": "^13.4.5",
+    "eslint-config-next": "^13.5.7",
     "postcss": "^8.4.8",
     "prettier": "^2.8.8",
     "tailwindcss": "^3.0.23",
