--- a/storefront/package.json
+++ b/storefront/package.json
@@ -43,11 +43,13 @@
     "qs": "^6.12.1",
     "react": "^18.2.0",
     "react-country-flag": "^3.0.2",
+    "react-datepicker": "^7.5.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.3.0",
     "react-instantsearch-hooks-web": "^6.29.0",
     "react-intersection-observer": "^9.3.4",
     "server-only": "^0.0.1",
+    "swiper": "^11.1.14",
     "tailwindcss-radix": "^2.8.0",
     "webpack": "^5"
   },
