--- a/backend/package.json
+++ b/backend/package.json
@@ -27,7 +27,7 @@
     "@medusajs/medusa": "rc",
     "@medusajs/medusa-cli": "rc",
     "@medusajs/notification-sendgrid": "rc",
-    "@medusajs/payment-stripe": "rc",
+    "@medusajs/payment-stripe": "^2.0.7-preview-20241126210159",
     "@mikro-orm/core": "5.9.7",
     "@mikro-orm/knex": "5.9.7",
     "@mikro-orm/migrations": "5.9.7",
@@ -35,10 +35,13 @@
     "awilix": "^8.0.1",
     "cors": "^2.8.5",
     "lucide-react": "^0.454.0",
+    "medusa-fulfillment-manual": "^1.1.41",
+    "medusa-payment-stripe": "^6.0.11",
     "medusajs-launch-utils": "^0.0.3",
     "pg": "^8.13.0"
   },
   "devDependencies": {
+    "fancourier-delivery": "file:./src/plugins/fancourier-delivery",
     "@mikro-orm/cli": "5.9.7",
     "@swc/core": "1.5.7",
     "@swc/jest": "^0.2.36",
