--- a/backend/package.json
+++ b/backend/package.json
@@ -13,7 +13,7 @@
     "medusa"
   ],
   "scripts": {
-    "build": "medusa build && ln -s .medusa/server/public/ public",
+    "build": "medusa build",
     "seed": "medusa exec ./src/scripts/seed.ts",
     "seed:once": "init-backend",
     "start": "medusa start",
