--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -27,6 +27,9 @@
     "**/__fixtures__",
     "node_modules",
     "build",
-    ".cache"
+    ".cache",
+    "dist",
+    ".medusa",
+    "**/public/admin/assets"
   ]
 }
