--- a/backend/package.json
+++ b/backend/package.json
@@ -38,8 +38,11 @@
     "@react-email/components": "^0.0.26",
     "awilix": "^8.0.1",
     "express": "^4.21.1",
+    "medusa-payment-manual": "^1.0.25",
+    "medusa-plugin-sendgrid": "^1.3.13",
     "medusajs-launch-utils": "^0.0.5",
     "minio": "^8.0.2",
+    "node-cron": "^3.0.3",
     "pg": "^8.13.0",
     "resend": "4.0.1",
     "ulid": "^2.3.0"
